--- a/backend/package.json
+++ b/backend/package.json
@@ -2,7 +2,7 @@
     "name": "backend",
     "version": "1.0.0",
     "description": "",
-    "main": "index.js",
+    "main": "server.js",
     "engines": {
         "node": "14.x"
     },
@@ -14,8 +14,13 @@
     "license": "ISC",
     "dependencies": {
         "cors": "^2.8.5",
+        "dotenv": "^16.0.0",
         "express": "^4.17.2",
+        "express-rate-limit": "^6.2.0",
+        "helmet": "^5.0.2",
+        "morgan": "^1.10.0",
         "nodemon": "^2.0.15",
-        "opennode": "^1.3.0"
+        "opennode": "^1.3.0",
+        "socket.io": "^4.4.1"
     }
 }
